syntax = "proto3";

package CorbaQuiz;

message Quiz {
  int32 id = 1;
  string question = 2;
  string answer_1 = 3;
  string answer_2 = 4;
  string answer_3 = 5;
  string answer_4 = 6;
  int32 correct_answer = 7;
}

message Player {
  string playerName = 1;
  int32 score = 2;
}

service QuizGame {
  rpc GetQuiz(Empty) returns (QuizSequence) {}

  rpc GetQuestion(QuestionRequest) returns (Quiz) {}

  rpc RegisterPlayer(PlayerRegistration) returns (Empty) {}

  rpc Play(PlayerMove) returns (Empty) {}

  rpc GetPlayerScores(Empty) returns (PlayerSequence) {}

  rpc getPlayerScore(Player) returns (PlayerScore);
}

message PlayerScore {
  string playerName = 1;
  int32 score = 2;
}

message Empty {}

message QuestionRequest {
  int32 id = 1;
}

message PlayerRegistration {
  string playerName = 1;
}

message PlayerMove {
  string playerName = 1;
  int32 quizId = 2;
  int32 selectedAnswer = 3;
}

message QuizSequence {
  repeated Quiz quizzes = 1;
}

message PlayerSequence {
  repeated Player players = 1;
}
